Update background image source in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <img
     class="background-gif"
-    src="https://i.imgur.com/8QFvC2p.gif"
+    src="https://i.imgur.com/FCf7zsm.gif"
     alt="Animated Galaxy Background"
   />
 
